// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styles should return a valid rule with default paremeters for current node in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\locals.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.module\\)\\.\\)\\*\\\\\\.css\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\locals.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": false,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`styles should return a valid rule with default paremeters for legacy browsers in development mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\style-loader\\\\index.js",
            "options": Object {},
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]__[local]--[hash:base64:5]",
              "minimize": false,
              "modules": true,
              "sourceMap": true,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.module\\)\\.\\)\\*\\\\\\.css\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\style-loader\\\\index.js",
            "options": Object {},
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]__[local]--[hash:base64:5]",
              "minimize": false,
              "modules": false,
              "sourceMap": true,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`styles should return a valid rule with default paremeters for legacy browsers in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/i,
        "use": Array [
          "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\mini-css-extract-plugin\\\\dist\\\\loader.js",
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.module\\)\\.\\)\\*\\\\\\.css\\$/i,
        "use": Array [
          "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\mini-css-extract-plugin\\\\dist\\\\loader.js",
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": false,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "[id].[chunkhash].css",
        "filename": "[name].css",
      },
    },
  ],
}
`;

exports[`styles should return a valid rule with default paremeters for modern browsers in development mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\style-loader\\\\index.js",
            "options": Object {},
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]__[local]--[hash:base64:5]",
              "minimize": false,
              "modules": true,
              "sourceMap": true,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.module\\)\\.\\)\\*\\\\\\.css\\$/i,
        "use": Array [
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\style-loader\\\\index.js",
            "options": Object {},
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[path][name]__[local]--[hash:base64:5]",
              "minimize": false,
              "modules": false,
              "sourceMap": true,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`styles should return a valid rule with default paremeters for modern browsers in production mode 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/i,
        "use": Array [
          "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\mini-css-extract-plugin\\\\dist\\\\loader.js",
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "test": /\\^\\(\\?:\\(\\?!\\\\\\.module\\)\\.\\)\\*\\\\\\.css\\$/i,
        "use": Array [
          "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\mini-css-extract-plugin\\\\dist\\\\loader.js",
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\css-loader\\\\index.js",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": false,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "C:\\\\projects\\\\dev\\\\webpack-features\\\\node_modules\\\\postcss-loader\\\\lib\\\\index.js",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
              ],
              "sourceMap": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "[id].[chunkhash].css",
        "filename": "[name].css",
      },
    },
  ],
}
`;
